--- a/LargeSystemsMiniProject - Client/src/main/resources/fxml/LargeSystemsOverview.fxml
+++ b/LargeSystemsMiniProject - Client/src/main/resources/fxml/LargeSystemsOverview.fxml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -13,16 +21,17 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="670.0" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.OverviewController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="1075.0" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.OverviewController">
    <children>
-      <SplitPane dividerPositions="0.29797979797979796" prefHeight="565.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.21395348837209302" prefHeight="565.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="317.0">
                <children>
-                  <TableView fx:id="tblCountries" prefHeight="564.0" prefWidth="190.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-12.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tblCountries" prefHeight="619.0" prefWidth="242.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columns>
-                        <TableColumn fx:id="tblNameColumn" prefWidth="83.0" text="Name" />
-                        <TableColumn fx:id="tblCurrencyColumn" prefWidth="115.0" text="Currency" />
+                        <TableColumn fx:id="tblNameColumn" prefWidth="95.0" text="Name" />
+                        <TableColumn fx:id="tblCurrencyColumn" prefWidth="121.0" text="Currency" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -32,13 +41,13 @@
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="417.0" styleClass="background">
                <children>
-                  <ImageView fx:id="countryImg" fitHeight="93.0" fitWidth="92.0" layoutX="292.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0" />
-                  <Label layoutX="14.0" layoutY="14.0" styleClass="label-header" text="Country Details" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+                  <Label layoutX="1.0" layoutY="5.0" styleClass="label-header" text="Country Details">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="14.0" layoutY="29.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="105.0">
+                  <ImageView fx:id="countryImg" fitHeight="93.0" fitWidth="92.0" layoutX="358.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true" />
+                  <GridPane layoutX="1.0" layoutY="140.0" prefHeight="254.0" prefWidth="449.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -62,7 +71,7 @@
                         <Label fx:id="lblName" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
                         <Label fx:id="lblCapital" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                         <Label fx:id="lblRegion" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-                        <Label fx:id="lblPopulation" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                        <Label fx:id="lblPopulation" alignment="CENTER_RIGHT" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
                         <Label fx:id="lblCurrency" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
                         <Label text="Alpha 2 Code" GridPane.rowIndex="5" />
                         <Label text="Alpha 3 Code" GridPane.rowIndex="6" />
@@ -72,19 +81,27 @@
                         <Label fx:id="lblTimezone" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
                      </children>
                   </GridPane>
-                  <ButtonBar buttonMinWidth="90.0" layoutX="203.0" layoutY="344.0" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="8.0">
-                     <buttons>
-                        <Button mnemonicParsing="false" onAction="#btnNewClicked" text="New.." />
-                        <Button mnemonicParsing="false" onAction="#btnEditClicked" text="Edit.." />
-                        <Button mnemonicParsing="false" onAction="#btnDeleteCountry" text="Delete" />
-                     </buttons>
-                  </ButtonBar>
-                  <Label alignment="CENTER" layoutX="1.0" layoutY="339.0" prefHeight="21.0" prefWidth="417.0" styleClass="label-bright" text="Country Description" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="339.0">
+                  <Label alignment="CENTER" layoutX="1.0" layoutY="385.0" prefHeight="21.0" prefWidth="449.0" styleClass="label-bright" text="Country Description">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="txtDescription" editable="false" layoutX="2.0" layoutY="363.0" prefHeight="153.0" prefWidth="422.0" wrapText="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="360.0" />
+                  <TextArea fx:id="txtDescription" editable="false" layoutX="1.0" layoutY="409.0" prefHeight="159.0" prefWidth="449.0" wrapText="true" />
+                  <ButtonBar buttonMinWidth="90.0" layoutX="1.0" layoutY="571.0" pickOnBounds="false" prefHeight="46.0" prefWidth="449.0">
+                     <buttons>
+                        <Button mnemonicParsing="false" onAction="#btnNewClicked" text="New.." />
+                        <Button mnemonicParsing="false" onAction="#btnUpdateClicked" text="Update.." />
+                        <Button mnemonicParsing="false" onAction="#btnDeleteCountry" text="Delete" />
+                     </buttons>
+                  </ButtonBar>
+                  <BarChart fx:id="chartCurrencies" layoutX="460.0" layoutY="137.0" legendVisible="false" prefHeight="440.0" prefWidth="367.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="460.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="137.0">
+                     <xAxis>
+                        <CategoryAxis side="BOTTOM" />
+                     </xAxis>
+                     <yAxis>
+                        <NumberAxis side="LEFT" />
+                     </yAxis>
+                  </BarChart>
                </children>
             </AnchorPane>
          </items>
