--- a/LargeSystemsMiniProject - Client/src/main/resources/fxml/LargeSystemsOverview.fxml
+++ b/LargeSystemsMiniProject - Client/src/main/resources/fxml/LargeSystemsOverview.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -16,6 +17,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="1075.0" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.OverviewController">
    <children>
       <SplitPane dividerPositions="0.21395348837209302" prefHeight="565.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -40,13 +42,14 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="countryImg" fitHeight="93.0" fitWidth="92.0" layoutX="358.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true" />
-                  <GridPane layoutX="1.0" layoutY="140.0" prefHeight="254.0" prefWidth="449.0">
+                  <ImageView fx:id="countryImg" fitHeight="93.0" fitWidth="92.0" layoutX="358.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                  <GridPane layoutX="1.0" layoutY="99.0" prefHeight="288.0" prefWidth="449.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -73,6 +76,8 @@
                         <Label fx:id="lblAlpha3" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
                         <Label text="Timezone" GridPane.rowIndex="7" />
                         <Label fx:id="lblTimezone" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+                        <Label text="Locaion" GridPane.rowIndex="8" />
+                        <Hyperlink fx:id="lnkLocation" onAction="#lnkCountryLocationClickec" text="Hyperlink" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
                      </children>
                   </GridPane>
                   <Label alignment="CENTER" layoutX="1.0" layoutY="385.0" prefHeight="21.0" prefWidth="449.0" styleClass="label-bright" text="Country Description">
